--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>重庆存己科技</title>
+    <title>重庆MBA招生考试服务平台</title>
     <!-- Bootstrap -->
     {css href="/static/bootstrap/css/bootstrap.min.css" /}
     <!-- Bootstrap验证插件 -->
@@ -23,4 +23,78 @@
     {css href="/static/index/layouts/css/layouts.css" /}
 
   </head>
-  <body>
+  <body>    
+<div class="header">
+    <!-- 顶部通用栏 一 -->
+    <div class="top-nav-wrapper">
+        <div class="top-nav-index">
+            <div class="top-list"><a href="#" target="_blank">重庆MBA招生考试服务平台</a></div>
+            <div class="top-list textCon"><a href="#" target="_blank">重庆MBA院校信息发布平台</a></div>
+            <div class="top-list textR"><a href="#" id="favorites">加入收藏</a></div>
+        </div>
+    </div>
+    <!-- 顶部通用栏 二 -->
+        <div class="header-wrapper">
+            <div class="header-index">
+                <a href="/" class="header-index-img lt" style="width: 300px;height: 100px;border: 1px solid #ddd;"><img src="#"></a>
+                <div class="header-index-text lt">
+                    <a href="/">重庆MBA院校信息发布和咨询平台</a>
+                    <a href="#">院校登陆</a>
+                </div>
+                <!-- 搜索框 -->
+                <div class="header-index-search lt">
+                    <input type="text" name="" placeholder="站内搜索" maxlength="40">
+                    <button type="submit" class="search_btn" id="searchBtn"><i class="glyphicon glyphicon-search" title="站内搜索"></i></button>
+                </div>
+            </div>
+        </div>
+    <!-- 顶部通用栏 三 -->
+        <div class="header-nav-box">
+            <div class="nav-box">
+                <div class="nav-box-list">
+                    <div class="nav-box-list-title lt">首页</div>
+                    <ul>
+                        <li><a href="#">招生</a></li>
+                        <li>|</li>  
+                        <li><a href="#">招生咨询</a></li>
+                        <li>|</li>
+                        <li><a href="#">考试咨询</a></li> 
+                    </ul>
+                </div>
+                <div class="br"></div>
+                <div class="nav-box-list">
+                    <div class="nav-box-list-title lt">院校</div>
+                    <ul>
+                        <li><a href="#">重庆大学</a></li>
+                        <li>|</li>  
+                        <li><a href="#">工商大学</a></li>
+                        <li>|</li>
+                        <li><a href="#">西南大学</a></li>
+                        <li>|</li> 
+                        <li><a href="#">重庆理工大学</a></li>
+                        <li>|</li>  
+                        <li><a href="#">重庆师范大学</a></li>  
+                    </ul>
+                </div>
+                <div class="br"></div>
+                <div class="nav-box-list">
+                    <div class="nav-box-list-title lt">考试</div>
+                    <ul>
+                        <li><a href="#">初试</a></li>
+                        <li>|</li>  
+                        <li><a href="#">复试</a></li>
+                        <li>|</li>
+                        <li><a href="#">英语</a></li>
+                        <li>|</li> 
+                        <li><a href="#">数学</a></li>
+                        <li>|</li>  
+                        <li><a href="#">逻辑</a></li>
+                        <li>|</li> 
+                        <li><a href="#">写作</a></li>    
+                    </ul>
+                </div>
+            </div>
+        </div>
+    
+</div>
+
