--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -1,109 +1,84 @@
-<!DOCTYPE html>
-<html class="no-js css-menubar" lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-  <meta name="description" content="bootstrap admin template">
-  <meta name="author" content="">
+{include file="layouts/header" /}
 
-  <title>重庆存己科技</title>
+<!-- 当前页面css -->
+    {css href="/static/index/index/css/index.css" /}
 
-  <link rel="apple-touch-icon" href="/static/assets/images/apple-touch-icon.png">
-  <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
+<div class="container">
+	<!--  1L 开始  -->
+	<div class="row">
+		<!-- 重庆MBA热点关注 -->
+		<div class="col-md-3"></div>
+		<!-- 幻灯片 -->
+		<div class="col-md-6"></div>
+		<!-- 招考广告  -->
+		<div class="col-md-3">
+			<!-- 招考广告 -->
+			<div class="col-md-12"></div>
+			<!-- 咨询热线 -->
+			<div class="col-md-12"></div>
+		</div>	
+	</div>
+	<!-- 1L 结束 -->
 
-  <!-- Stylesheets -->
-  <link rel="stylesheet" href="/static/assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/static/assets/css/bootstrap-extend.min.css">
-  <link rel="stylesheet" href="/static/assets/css/site.min.css">
+	<!-- 2L 开始-->
+	<div class="row">
+		<!-- 2L-左 重庆MBA 活动预告 -->
+		<div class="col-md-3"></div>
+		<!-- 2L中 招生质询/考试咨询 -->
+		<div class="col-md-6">
+			<!-- 招生咨询 -->
+			<div class="col-md-12"></div>
+			<!-- 考试咨询 -->
+			<div class="col-md-12"></div>
+		</div>
+		<!-- 2L-右  -->
+		<div class="col-md-3">
+			<!-- 手机站(二维码/域名) -->
+			<div class="col-md-12"></div>
+			<!-- 微信 -->
+			<div class="col-md-12"></div>
+			<!-- 院校推荐 -->
+			<div class="col-md-12"></div>
+		</div>	
+	</div>
+	<!-- 2L 结束 -->
 
-  <!-- Plugins -->
-  <link rel="stylesheet" href="/static/assets/vendor/animsition/animsition.css">
-  <link rel="stylesheet" href="/static/assets/vendor/asscrollable/asScrollable.css">
-  <link rel="stylesheet" href="/static/assets/vendor/switchery/switchery.css">
-  <link rel="stylesheet" href="/static/assets/vendor/intro-js/introjs.css">
-  <link rel="stylesheet" href="/static/assets/vendor/slidepanel/slidePanel.css">
-  <link rel="stylesheet" href="/static/assets/vendor/flag-icon-css/flag-icon.css">
+	<!-- 3L 开始 -->
+	<div class="row">
+		<!-- 广告位一 -->
+		<div class="col-md-6"></div>
+		<!-- 广告位一 -->
+		<div class="col-md-6"></div>
+	</div>
+	<!-- 院校发布 -->
+	<div class="row">
+		<!-- 院校发布 -->
+		<div class="col-md-12"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4"></div>
+		<div class="col-md-4"></div>
+	</div>
+	<div class="row">
+		<!-- 广告位 -->
+		<div class="col-md-6"></div>
+		<div class="col-md-6"></div>
+	</div>
+	<!-- 3L 结束 -->
 
-  <!-- Fonts -->
-  <link rel="stylesheet" href="/static/assets/fonts/web-icons/web-icons.min.css">
-  <link rel="stylesheet" href="/static/assets/fonts/brand-icons/brand-icons.min.css">
-  <!-- Inline -->
-  <link rel="stylesheet" href="/static/assets/examples/css/pages/errors.css">
-
-  <!-- Scripts -->
-  <script src="/static/assets/vendor/modernizr/modernizr.js"></script>
-  <script src="/static/assets/vendor/breakpoints/breakpoints.js"></script>
-  <script>
-    Breakpoints();
-  </script>
-</head>
-<body class="page-error page-error-404 layout-full">
-
-  <!-- Page -->
-  <div class="page animsition vertical-align text-center" data-animsition-in="fade-in"
-  data-animsition-out="fade-out">
-    <div class="page-content vertical-align-middle">
-      <header>
-        <h1 class="animation-slide-top">ThinkPHP5</h1>
-        <p>- 欢迎使用重庆存己科技集成开发框架 :)</p>
-      </header>
-      <footer class="page-copyright">
-        <p>WEBSITE BY <a href="http://getcunji.com" target="_blank">getcunji.com</a></p>
-        <p>© 2017-2027. All RIGHT RESERVED.</p>
-      </footer>
-    </div>
-  </div>
-  <!-- End Page -->
-
-
-  <!-- Core  -->
-  <script src="/static/assets/vendor/jquery/jquery.js"></script>
-  <script src="/static/assets/vendor/bootstrap/bootstrap.js"></script>
-  <script src="/static/assets/vendor/animsition/jquery.animsition.js"></script>
-  <script src="/static/assets/vendor/asscroll/jquery-asScroll.js"></script>
-  <script src="/static/assets/vendor/mousewheel/jquery.mousewheel.js"></script>
-  <script src="/static/assets/vendor/asscrollable/jquery.asScrollable.all.js"></script>
-  <script src="/static/assets/vendor/ashoverscroll/jquery-asHoverScroll.js"></script>
-
-  <!-- Plugins -->
-  <script src="/static/assets/vendor/switchery/switchery.min.js"></script>
-  <script src="/static/assets/vendor/intro-js/intro.js"></script>
-  <script src="/static/assets/vendor/screenfull/screenfull.js"></script>
-  <script src="/static/assets/vendor/slidepanel/jquery-slidePanel.js"></script>
-
-  <!-- Scripts -->
-  <script src="/static/assets/js/core.js"></script>
-  <script src="/static/assets/js/site.js"></script>
-
-  <script src="/static/assets/js/sections/menu.js"></script>
-  <script src="/static/assets/js/sections/menubar.js"></script>
-  <script src="/static/assets/js/sections/gridmenu.js"></script>
-  <script src="/static/assets/js/sections/sidebar.js"></script>
-
-  <script src="/static/assets/js/configs/config-colors.js"></script>
-  <script src="/static/assets/js/configs/config-tour.js"></script>
-
-  <script src="/static/assets/js/components/asscrollable.js"></script>
-  <script src="/static/assets/js/components/animsition.js"></script>
-  <script src="/static/assets/js/components/slidepanel.js"></script>
-  <script src="/static/assets/js/components/switchery.js"></script>
-
-  <!-- Scripts For This Page -->
+	<!-- 4L 开始 -->
+	<div class="row">
+		<!-- 考试咨询 综合咨询 初试 复试 英语 数学 逻辑 写作 -->
+		<div class="col-md-12"></div>
+	</div>
+	<div class="row">
+		<div class="col-md-4"></div>
+		<div class="col-md-4"></div>
+		<div class="col-md-4"></div>
+	</div>
+	<!-- 4L 结束 -->
+</div>
 
 
-  <script>
-    (function(document, window, $) {
-      'use strict';
-
-      var Site = window.Site;
-      $(document).ready(function() {
-        Site.run();
-      });
-    })(document, window, jQuery);
-  </script>
-
-
-</body>
-
-</html>
+{include file="layouts/footer" /}
