--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -1,4 +1,114 @@
 
+    <!--  底部样式开始  -->
+<div class="footer">
+    <!-- 合作伙伴 -->
+    <div class="partner">
+        <div class="partner_icon lt">
+            <span class="colorFFF glyphicon glyphicon-chevron-right"></span>
+        </div>
+        <div class="partner_title lt">合作伙伴</div>
+    </div>
+    <div class="partner_box">
+        <ul>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+        </ul>
+    </div>
+    <div class="h10"></div>
+    <!-- 友情链接  -->
+    <div class="container footer_link">
+        <div class="lt">友情链接：</div>
+        <ul>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+            <li><a href="#">重庆人才网</a></li>
+        </ul>
+    </div>
+    <!-- 底部链接 -->
+    <div class="container main_footer_bottom">
+        <p>
+            <a href="#">重庆大学MBA</a>&nbsp;&nbsp;|
+            <a href="#">重庆工商大学MBA</a>&nbsp;&nbsp;|
+            <a href="#">西南大学MBA</a>&nbsp;&nbsp;|
+            <a href="#">重庆师范大学MBA</a>&nbsp;&nbsp;|
+            <a href="#">重庆理工大学MBA</a>&nbsp;&nbsp;|
+            <a href="#">报名</a>&nbsp;&nbsp;|
+            <a href="#">备考</a>&nbsp;&nbsp;|
+            <a href="#">考试</a>&nbsp;&nbsp;|
+            <a href="#">复习</a>&nbsp;&nbsp;|
+            <a href="#">复试</a>&nbsp;&nbsp;|
+            <a href="#">关于我我们</a>&nbsp;&nbsp;|
+        </p>
+        <p>
+            <a href="#">重庆MBA招生考试服务平台</a>&nbsp;&nbsp;|
+            <a href="#">重庆招生考试网cqmba.org&nbsp;&nbsp;版权所有</a>&nbsp;&nbsp;|
+            <a href="#">地址：重庆市沙坪坝科技园7楼</a>&nbsp;&nbsp;|
+        </p>
+        <p>
+            <a href="#">渝ICP备160110000号-5</a>&nbsp;&nbsp;|
+            <a href="#">广告投放：023-88888888</a>&nbsp;&nbsp;|
+            <a href="#">客服邮箱：kefu@aaaa.com</a>&nbsp;&nbsp;|
+            <a href="#">渝公网安备 500222222222222号</a>&nbsp;&nbsp;|
+        </p>
+    </div>
+</div> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     {js href="/static/js/jquery-3.2.1.min.js" /}
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -8,7 +118,8 @@
     {js href="/static/bootstrapvalidator/dist/js/language/zh_CN.js" /}
     <!-- sweetalert弹窗插件 -->
     {js href="/static/sweetalert2/dist/sweetalert2.min.js" /}
-
+    <!-- header/fooyer js -->
+    {js href="/static/index/layouts/js/layouts.js" /}
     <!-- jQuery WEUI -->
     <script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/jquery-weui.min.js"></script>
     <script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>
