--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -36,10 +36,10 @@
     <!-- 顶部通用栏 二 -->
         <div class="header-wrapper">
             <div class="header-index">
-                <a href="/" class="header-index-img lt" style="width: 300px;height: 100px;border: 1px solid #ddd;"><img src="#"></a>
-                <div class="header-index-text lt">
-                    <a href="/">重庆MBA院校信息发布和咨询平台</a>
-                    <a href="#">院校登陆</a>
+                <a href="/" class="header-index-img lt" ><img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台"></a>
+                <div class="header-index-text  lt">
+                    <a href="/" >重庆MBA院校信息发布和咨询平台</a>
+                    <a href="#" class="rt">院校登陆</a>
                 </div>
                 <!-- 搜索框 -->
                 <div class="header-index-search lt">
@@ -51,49 +51,38 @@
     <!-- 顶部通用栏 三 -->
         <div class="header-nav-box">
             <div class="nav-box">
-                <div class="nav-box-list">
-                    <div class="nav-box-list-title lt">首页</div>
+                <div class="nav-box-list nav-box-first">
+                    <div class="nav-box-list-title  lt">首页</div>
                     <ul>
-                        <li><a href="#">招生</a></li>
-                        <li>|</li>  
                         <li><a href="#">招生咨询</a></li>
-                        <li>|</li>
                         <li><a href="#">考试咨询</a></li> 
                     </ul>
                 </div>
-                <div class="br"></div>
+                <div class="br1"></div>
                 <div class="nav-box-list">
                     <div class="nav-box-list-title lt">院校</div>
                     <ul>
                         <li><a href="#">重庆大学</a></li>
-                        <li>|</li>  
-                        <li><a href="#">工商大学</a></li>
-                        <li>|</li>
-                        <li><a href="#">西南大学</a></li>
-                        <li>|</li> 
+                        <li><a href="#">重庆工商大学</a></li>
                         <li><a href="#">重庆理工大学</a></li>
-                        <li>|</li>  
+                        <li><a href="#">西南大学</a></li>
                         <li><a href="#">重庆师范大学</a></li>  
                     </ul>
                 </div>
                 <div class="br"></div>
-                <div class="nav-box-list">
+                <div class="nav-box-list nav-box-last">
                     <div class="nav-box-list-title lt">考试</div>
                     <ul>
-                        <li><a href="#">初试</a></li>
-                        <li>|</li>  
+                        <li><a href="#">初试</a></li> 
                         <li><a href="#">复试</a></li>
-                        <li>|</li>
                         <li><a href="#">英语</a></li>
-                        <li>|</li> 
                         <li><a href="#">数学</a></li>
-                        <li>|</li>  
                         <li><a href="#">逻辑</a></li>
-                        <li>|</li> 
                         <li><a href="#">写作</a></li>    
                     </ul>
                 </div>
             </div>
+            
         </div>
     
 </div>
