--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -1,69 +1,26 @@
 
     <!--  底部样式开始  -->
 <div class="footer">
-    <!-- 合作伙伴 -->
-    <div class="partner">
-        <div class="partner_icon lt">
-            <span class="colorFFF glyphicon glyphicon-chevron-right"></span>
+    <div class="container">
+        <!-- 友情链接  -->
+    <div class="footer_link">
+        <div class="footer_link_hd">
+            <span class="footer_link_hd_span">友情链接</span>
         </div>
-        <div class="partner_title lt">合作伙伴</div>
-    </div>
-    <div class="partner_box">
         <ul>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
-            <li><a href="#"><img src="/static/images/gc-all.png"></a></li>
+            <li><a href="#">重庆MBA招生考试网</a></li>
+            <li><a href="#">中国研究生招生考试网</a></li>
+            <li><a href="#">重庆大学MBA教育中心(经管院)</a></li>
+            <li><a href="#">西南大学MBA教育中心</a></li>
+            <li><a href="#">重庆理工大学MBA中心</a></li>
+            <li><a href="#">重庆市师范大学经济与管理学院</a></li>
+            <li><a href="#">四川大学商学院MBA中心</a></li>
+            <li><a href="#">电子科技大学经济与管理学院</a></li>
+            <li><a href="#">上海交通大学安泰经济与管理学院</a></li>
+            <li><a href="#">西安网站建设</a></li>
         </ul>
     </div>
     <div class="h10"></div>
-    <!-- 友情链接  -->
-    <div class="container footer_link">
-        <div class="lt">友情链接：</div>
-        <ul>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-            <li><a href="#">重庆人才网</a></li>
-        </ul>
-    </div>
     <!-- 底部链接 -->
     <div class="container main_footer_bottom">
         <p>
@@ -80,17 +37,20 @@
             <a href="#">关于我我们</a>&nbsp;&nbsp;|
         </p>
         <p>
+            <a href="/index/Websitewap/index">网站导航</a>&nbsp;&nbsp;|
             <a href="#">重庆MBA招生考试服务平台</a>&nbsp;&nbsp;|
             <a href="#">重庆招生考试网cqmba.org&nbsp;&nbsp;版权所有</a>&nbsp;&nbsp;|
-            <a href="#">地址：重庆市沙坪坝科技园7楼</a>&nbsp;&nbsp;|
+            <a href="#">地址：重庆市沙坪坝科技园7楼</a>&nbsp;&nbsp;
         </p>
         <p>
-            <a href="#">渝ICP备160110000号-5</a>&nbsp;&nbsp;|
-            <a href="#">广告投放：023-88888888</a>&nbsp;&nbsp;|
-            <a href="#">客服邮箱：kefu@aaaa.com</a>&nbsp;&nbsp;|
-            <a href="#">渝公网安备 500222222222222号</a>&nbsp;&nbsp;|
+            <a href="#">渝ICP备16011631号-5</a>&nbsp;&nbsp;|
+            <a href="#">广告投放：023-81686224</a>&nbsp;&nbsp;|
+            <a href="#">客服邮箱：kefu@mba.orgbeian.png</a>&nbsp;&nbsp;|
+            <a href="#">渝公网安备 50010602500870号</a>&nbsp;&nbsp;|
         </p>
     </div>
+    </div>
+    
 </div> 
 
 
