--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -7,18 +7,21 @@
         <div class="footer_link_hd">
             <span class="footer_link_hd_span">友情链接</span>
         </div>
-        <ul>
-            <li><a href="#">重庆MBA招生考试网</a></li>
-            <li><a href="#">中国研究生招生考试网</a></li>
-            <li><a href="#">重庆大学MBA教育中心(经管院)</a></li>
-            <li><a href="#">西南大学MBA教育中心</a></li>
-            <li><a href="#">重庆理工大学MBA中心</a></li>
-            <li><a href="#">重庆市师范大学经济与管理学院</a></li>
-            <li><a href="#">四川大学商学院MBA中心</a></li>
-            <li><a href="#">电子科技大学经济与管理学院</a></li>
-            <li><a href="#">上海交通大学安泰经济与管理学院</a></li>
-            <li><a href="#">西安网站建设</a></li>
-        </ul>
+        <div class="main_footer_bottom">
+            <p>
+                <a href="#">重庆MBA招生考试网</a>&nbsp;&nbsp;|
+                <a href="#">中国研究生招生考试网</a>&nbsp;&nbsp;|
+                <a href="#">重庆大学MBA教育中心</a>&nbsp;&nbsp;|
+                <a href="#">西南大学MBA教育中心</a>&nbsp;&nbsp;|
+                <a href="#">重庆理工大学MBA</a>&nbsp;&nbsp;|
+                <a href="#">重庆市师范大学经济与管理学院</a>&nbsp;&nbsp;|
+                <a href="#">四川大学商学院MBA中心</a>&nbsp;&nbsp;|
+                <a href="#">电子科技大学经济与管理学院</a>&nbsp;&nbsp;|
+                <a href="#">上海交通大学安泰经济与管理学院</a>&nbsp;&nbsp;|
+                <a href="#">西安网站建设</a>&nbsp;&nbsp;
+            </p>
+        </div>
+        
     </div>
     <div class="h10"></div>
     <!-- 底部链接 -->
@@ -34,7 +37,7 @@
             <a href="#">考试</a>&nbsp;&nbsp;|
             <a href="#">复习</a>&nbsp;&nbsp;|
             <a href="#">复试</a>&nbsp;&nbsp;|
-            <a href="#">关于我我们</a>&nbsp;&nbsp;|
+            <a href="#">关于我我们</a>&nbsp;&nbsp;
         </p>
         <p>
             <a href="/index/Websitewap/index">网站导航</a>&nbsp;&nbsp;|
@@ -46,7 +49,7 @@
             <a href="#">渝ICP备16011631号-5</a>&nbsp;&nbsp;|
             <a href="#">广告投放：023-81686224</a>&nbsp;&nbsp;|
             <a href="#">客服邮箱：kefu@mba.orgbeian.png</a>&nbsp;&nbsp;|
-            <a href="#">渝公网安备 50010602500870号</a>&nbsp;&nbsp;|
+            <a href="#">渝公网安备 50010602500870号</a>&nbsp;&nbsp;
         </p>
     </div>
     </div>
