--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>重庆MBA招生考试服务平台</title>
+    <meta  name="description" content="重庆MBA招生考试服务平台">
+    <meta name="keywords" content="MBA 考研">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- Bootstrap -->
     {css href="/static/bootstrap/css/bootstrap.min.css" /}
     <!-- Bootstrap验证插件 -->
@@ -50,39 +53,47 @@
         </div>
     <!-- 顶部通用栏 三 -->
         <div class="header-nav-box">
-            <div class="nav-box">
-                <div class="nav-box-list nav-box-first">
-                    <div class="nav-box-list-title  lt">首页</div>
-                    <ul>
+            <ul class="nav-box">
+                <li class="nav-first">
+                    <div class="nav-title">
+                        <a href="/">首页</a>
+                    </div>
+                </li>
+                <li class="nav-second">
+                    <div class="nav-title">招生</div>
+                    <ul class="nav-td">
                         <li><a href="#">招生咨询</a></li>
-                        <li><a href="#">考试咨询</a></li> 
+                        <li><a href="#">考试咨询</a></li>
+                        <li><a href="#">热点公告</a></li>
+                        <li><a href="#">招考公告</a></li>
                     </ul>
-                </div>
-                <div class="br1"></div>
-                <div class="nav-box-list">
-                    <div class="nav-box-list-title lt">院校</div>
-                    <ul>
+                </li>
+                <li class="nav-third">
+                    <div class="nav-title">院校</div>
+                    <ul class="nav-td">
                         <li><a href="#">重庆大学</a></li>
                         <li><a href="#">重庆工商大学</a></li>
+                        <li><a href="#">重庆师范大学</a></li>
+                        <li><a href="#">西南大学</a></li>
                         <li><a href="#">重庆理工大学</a></li>
                         <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆师范大学</a></li>  
+                        <li><a href="#">重庆理工大学</a></li>
+                        <li><a href="#">西南大学</a></li>
+                        <li><a href="#">重庆理工大学</a></li>
                     </ul>
-                </div>
-                <div class="br"></div>
-                <div class="nav-box-list nav-box-last">
-                    <div class="nav-box-list-title lt">考试</div>
-                    <ul>
-                        <li><a href="#">初试</a></li> 
+                </li>
+                <li class="nav-fourth">
+                    <div class="nav-title">考试</div>
+                    <ul class="nav-td">
+                        <li><a href="#">初试</a></li>
                         <li><a href="#">复试</a></li>
                         <li><a href="#">英语</a></li>
                         <li><a href="#">数学</a></li>
                         <li><a href="#">逻辑</a></li>
-                        <li><a href="#">写作</a></li>    
+                        <li><a href="#">写作</a></li>
                     </ul>
-                </div>
-            </div>
-
+                </li>
+            </ul>
             
         </div>
     
