--- a/public/static/index/layouts/css/layouts.css
+++ b/public/static/index/layouts/css/layouts.css
@@ -33,8 +33,8 @@ body{
 .header-index-search .search_btn i{color: #fff;font-size: 22px;position: absolute;left: 30%;top:25%;}
 
 .header-nav-box{width: 100%;background-color: #1787e0;}
-.header-nav-box .nav-box{width: 1250px;height: 80px;margin: 0 auto;}
-.header-nav-box .nav-box .nav-box-list{float: left;color: #fff;}
+.header-nav-box .nav-box{width: 1220px;height: 80px;margin: 0 auto;}
+/*.header-nav-box .nav-box .nav-box-list{float: left;color: #fff;}
 div.br,div.br1{display: block;height: 60px;border-right: 1px solid #fff;line-height: 80px;font-size: 0;width: 0;
 	float: left;margin: 10px 60px;}
 div.br1{margin:10px 100px;}
@@ -43,15 +43,22 @@ div.br1{margin:10px 100px;}
 .header-nav-box .nav-box .nav-box-list ul li{float: left;padding: 10px 0 0 20px; }
 .header-nav-box .nav-box  .nav-box-last ul li{padding: 10px 0 0 10px; width: 20%;}
 .header-nav-box .nav-box .nav-box-list ul li a{color: #fff;font-size: 14px;}
-
-
-
-
+*/
+.nav-box li{float: left;color: #fff;}
+.nav-box li a{color: #fff;}
+.nav-box .nav-title{float: left;line-height: 80px;margin-right: 25px;font-size: 16px;font-weight: bold;}
+.nav-box .nav-td{float: left;margin-top: 12px;padding-right: 30px;border-right: 2px solid #459ce3;font-size: 14px;}
+.nav-box .nav-second .nav-td{width: 230px;}
+.nav-box .nav-third .nav-td{width: 460px;height: 56px;}
+.nav-box .nav-fourth .nav-td{width: 200px;}
+.nav-td li{height: 28px;line-height: 28px;margin-right: 10px;padding: 0;border-bottom: 0;}
+.nav-second .nav-title,.nav-third .nav-title,.nav-fourth .nav-title{margin-left: 20px;}
+.nav-fourth .nav-td{border-right: 0;padding-right: 0;}
 		/***************头部样式开始  end  *********************/
 
 
 		/***************尾部样式  start  *********************/
-.footer{background-color: #383737;color: #fff;width: 100%;}
+.footer{width: 100%;}
 .partner .partner_title{height: 40px;font-size: 16px;font-weight: 500;padding-left: 10px;}
 .partner_box{width: 1180px;margin: 20px auto;height: 120px;}
 .partner_box ul li{float: left;width: 190px;height: 60px;margin-right: 8px;margin-bottom: 10px;}
@@ -61,10 +68,9 @@ div.br1{margin:10px 100px;}
 .footer_link_hd{background: url(/static/images/icon.png)no-repeat;width:150px; height: 45px;}
 .footer_link_hd_span{ border-left: 2px solid #fff;font-size: 20px;font-weight: 600;padding-left:15px;line-height: 45px;
 		margin-left: 15px;}
-.footer_link ul li{float: left;line-height: 25px;}
-.footer_link ul li a{padding:5px 10px;color: #fff;}
 .main_footer_bottom{text-align: center;padding-top: 20px;border-top: 2px solid #e5e5e5;}
-.main_footer_bottom p a{padding: 5px 10px;color: #fff;}
+.main_footer_bottom p a{padding: 5px 10px;}
+.footer_link p a{;line-height: 25px;}
 		/***************尾部样式  start  *********************/
 
 /*主体宽度*/
