--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -31,22 +31,28 @@
     <!-- 顶部通用栏 一 -->
     <div class="top-nav-wrapper">
         <div class="top-nav-index">
-            <div class="top-list"><a href="#" target="_blank">重庆MBA招生考试服务平台</a></div>
-            <div class="top-list textCon"><a href="#" target="_blank">重庆MBA院校信息发布平台</a></div>
-            <div class="top-list textR"><a href="#" id="favorites">加入收藏</a></div>
+            <div class="top-list top-list_left">
+                <a href="#" target="_blank">重庆MBA招生考试服务平台</a>
+                <a href="#" target="_blank">务平台</a>
+                <a href="#" target="_blank">重庆MBA招生考</a>
+                <a href="#" target="_blank">重庆MBA院校信息发布平台</a>
+            </div>
+            <div class="top-list textR">
+                <a href="#">院校登陆</a>
+                <a href="#" id="favorites">加入收藏</a>
+            </div>
         </div>
     </div>
     <!-- 顶部通用栏 二 -->
         <div class="header-wrapper">
             <div class="header-index">
                 <a href="/" class="header-index-img lt" ><img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台"></a>
-                <div class="header-index-text  lt">
-                    <a href="/" >重庆MBA院校信息发布和咨询平台</a>
-                    <a href="#" class="rt">院校登陆</a>
+                <div class="header-index-ad  lt">
+                    <img src="static/images/banner.png">
                 </div>
                 <!-- 搜索框 -->
                 <div class="header-index-search lt">
-                    <input type="text" name="" placeholder="站内搜索" maxlength="40">
+                    <input type="text" name="keywords" id="keywords" placeholder="站内搜索" maxlength="40">
                     <button type="submit" class="search_btn" id="searchBtn"><i class="glyphicon glyphicon-search" title="站内搜索"></i></button>
                 </div>
             </div>
@@ -56,7 +62,7 @@
             <ul class="nav-box">
                 <li class="nav-first">
                     <div class="nav-title">
-                        <a href="/">首页</a>
+                        <a href="/Websitewap/index">首页</a>
                     </div>
                 </li>
                 <li class="nav-second">
@@ -66,6 +72,11 @@
                         <li><a href="#">考试咨询</a></li>
                         <li><a href="#">热点公告</a></li>
                         <li><a href="#">招考公告</a></li>
+                        <li><a href="#">招生咨询</a></li>
+                        <li><a href="#">考试咨询</a></li>
+                        <li><a href="#">热点公告</a></li>
+                        <li><a href="#">招考公告</a></li>
+                        <li><a href="#">招生咨询</a></li>
                     </ul>
                 </li>
                 <li class="nav-third">
@@ -80,11 +91,24 @@
                         <li><a href="#">重庆理工大学</a></li>
                         <li><a href="#">西南大学</a></li>
                         <li><a href="#">重庆理工大学</a></li>
+                        <li><a href="#">重庆理工大学</a></li>
+                        <li><a href="#">西南大学</a></li>
+                        <li><a href="#">重庆理工大学</a></li>
+                        <li><a href="#">西南大学</a></li>
+                        <li><a href="#">重庆理工大学</a></li>
+                        <li><a href="#">重庆理工大学</a></li>
+
                     </ul>
                 </li>
                 <li class="nav-fourth">
                     <div class="nav-title">考试</div>
                     <ul class="nav-td">
+                        <li><a href="#">初试</a></li>
+                        <li><a href="#">复试</a></li>
+                        <li><a href="#">英语</a></li>
+                        <li><a href="#">数学</a></li>
+                        <li><a href="#">逻辑</a></li>
+                        <li><a href="#">写作</a></li>
                         <li><a href="#">初试</a></li>
                         <li><a href="#">复试</a></li>
                         <li><a href="#">英语</a></li>
@@ -99,3 +123,5 @@
     
 </div>
 
+<!-- header/fooyer js -->
+    {js href="/static/index/layouts/js/layouts.js" /}
