--- a/application/index/view/Layouts/right_aside.html
+++ b/application/index/view/Layouts/right_aside.html
@@ -52,17 +52,17 @@
 					<!-- 手机站(二维码/域名) -->
 					<div class="col-md-12">
 							<div class="lt second_QR_hd">
-								<span>手机网站</span>
+								<span>手机站二维码</span>
 							</div>
-							<div class="lt second_phone_img"><img src="/static/images/phone.png" alt="手机网站" title="手机网站"></div>
+							<div class="lt second_phone_img"><img src="/static/images/phone.png" alt="手机站二维码" title="手机站二维码"></div>
 					</div>
 					<div class="h10"></div>
 					<!-- 微信 -->
 					<div class="col-md-12">
 							<div class="lt second_QR_hd">
-									<span class="second_QR_hd_span">微信公众号</span>
+									<span>公众号二维码</span>
 							</div>
-							<div class="lt second_phone_img"><img src="/static/images/wx.png" alt="微信公众号" title="微信公众号"></div>
+							<div class="lt second_phone_img"><img src="/static/images/wx.png" alt="公众号二维码" title="公众号二维码"></div>
 					</div>
 					<div class="h16"></div>
 					<!-- 院校推荐 -->
