--- a/application/index/view/Layouts/footer.html
+++ b/application/index/view/Layouts/footer.html
@@ -9,16 +9,16 @@
         </div>
         <div class="main_footer_bottom">
             <p>
-                <a href="#">重庆MBA招生考试网</a>&nbsp;&nbsp;|
-                <a href="#">中国研究生招生考试网</a>&nbsp;&nbsp;|
-                <a href="#">重庆大学MBA教育中心</a>&nbsp;&nbsp;|
-                <a href="#">西南大学MBA教育中心</a>&nbsp;&nbsp;|
-                <a href="#">重庆理工大学MBA</a>&nbsp;&nbsp;|
-                <a href="#">重庆市师范大学经济与管理学院</a>&nbsp;&nbsp;|
-                <a href="#">四川大学商学院MBA中心</a>&nbsp;&nbsp;|
-                <a href="#">电子科技大学经济与管理学院</a>&nbsp;&nbsp;|
-                <a href="#">上海交通大学安泰经济与管理学院</a>&nbsp;&nbsp;|
-                <a href="#">西安网站建设</a>&nbsp;&nbsp;
+                <a href="#">重庆MBA招生考试网</a>-
+                <a href="#">中国研究生招生考试网</a>-
+                <a href="#">重庆大学MBA教育中心</a>-
+                <a href="#">西南大学MBA教育中心</a>-
+                <a href="#">重庆理工大学MBA</a>-
+                <a href="#">重庆市师范大学经济与管理学院</a>-
+                <a href="#">四川大学商学院MBA中心</a>-
+                <a href="#">电子科技大学经济与管理学院</a>-
+                <a href="#">上海交通大学安泰经济与管理学院</a>-
+                <a href="#">西安网站建设</a>
             </p>
         </div>
         
@@ -27,29 +27,29 @@
     <!-- 底部链接 -->
     <div class="container main_footer_bottom">
         <p>
-            <a href="#">重庆大学MBA</a>&nbsp;&nbsp;|
-            <a href="#">重庆工商大学MBA</a>&nbsp;&nbsp;|
-            <a href="#">西南大学MBA</a>&nbsp;&nbsp;|
-            <a href="#">重庆师范大学MBA</a>&nbsp;&nbsp;|
-            <a href="#">重庆理工大学MBA</a>&nbsp;&nbsp;|
-            <a href="#">报名</a>&nbsp;&nbsp;|
-            <a href="#">备考</a>&nbsp;&nbsp;|
-            <a href="#">考试</a>&nbsp;&nbsp;|
-            <a href="#">复习</a>&nbsp;&nbsp;|
-            <a href="#">复试</a>&nbsp;&nbsp;|
-            <a href="#">关于我我们</a>&nbsp;&nbsp;
+            <a href="#">重庆大学MBA</a>-
+            <a href="#">重庆工商大学MBA</a>-
+            <a href="#">西南大学MBA</a>-
+            <a href="#">重庆师范大学MBA</a>-
+            <a href="#">重庆理工大学MBA</a>-
+            <a href="#">报名</a>-
+            <a href="#">备考</a>-
+            <a href="#">考试</a>-
+            <a href="#">复习</a>-
+            <a href="#">复试</a>-
+            <a href="#">关于我我们</a>
         </p>
         <p>
-            <a href="/index/Websitewap/index">网站导航</a>&nbsp;&nbsp;|
-            <a href="#">重庆MBA招生考试服务平台</a>&nbsp;&nbsp;|
-            <a href="#">重庆招生考试网cqmba.org&nbsp;&nbsp;版权所有</a>&nbsp;&nbsp;|
-            <a href="#">地址：重庆市沙坪坝科技园7楼</a>&nbsp;&nbsp;
+            <a href="/index/Websitewap/index">网站导航</a>-
+            <a href="#">重庆MBA招生考试服务平台</a>-
+            <a href="#">重庆招生考试网cqmba.org版权所有</a>-
+            <a href="#">地址：重庆市沙坪坝科技园7楼</a>
         </p>
         <p>
-            <a href="#">渝ICP备16011631号-5</a>&nbsp;&nbsp;|
-            <a href="#">广告投放：023-81686224</a>&nbsp;&nbsp;|
-            <a href="#">客服邮箱：kefu@mba.orgbeian.png</a>&nbsp;&nbsp;|
-            <a href="#">渝公网安备 50010602500870号</a>&nbsp;&nbsp;
+            <a href="#">渝ICP备16011631号-5</a>-
+            <a href="#">广告投放：023-81686224</a>-
+            <a href="#">客服邮箱：kefu@mba.orgbeian.png</a>-
+            <a href="#">渝公网安备 50010602500870号</a>
         </p>
     </div>
     </div>
