--- a/application/index/view/Message/index.html
+++ b/application/index/view/Message/index.html
@@ -3,10 +3,12 @@
 <!-- 当前页面css -->
     {css href="/static/message/css/index.css" /}
 <div class="container">
-	<div class="row">
-		<div class="col-md-9"></div>
-		<div class="col-md-3"></div>
+	
+	<div class="left_aside lt">
+		
 	</div>
+	<!-- 引入公共右部样式 -->
+	{include file="layouts/right_aside" /}
 </div>
 
 {include file="layouts/footer" /}
