--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -3,13 +3,17 @@
 .right_aside{width: 340px;}
 
 .h10{display: block;width: 100%;height: 10px;font-size: 0;clear: both;}
+.h20{display: block;width: 100%;height: 20px;font-size: 0;clear: both;}
+.h290{height: 290px;}
 .oneBox{margin-top: 20px;}
 .oneBox .oneBox_left,.oneBox .oneBox_right{width: 350px;height: 264px;}
 .oneBox .oneBox_center{width: 520px;}
 .first{width: 100%;height: 264px;}
 .oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: bold;border-bottom: 1px solid #ddd;}
-.oneBox .oneBox_title .oneBox_title_bd{padding-left: 10px;border-left:2px solid #1787e0;}
+.oneBox .oneBox_title .oneBox_title_bd{padding-left: 10px;border-left:2px solid #1787e0;font-size: 20px;}
 .oneBox .oneBox_body{width: 100%;padding:5px 0;}
+.weui-panel__bd .weui-media-box{padding-bottom:4px;}
+.weui-panel__bd .weui-media-box .weui-media-box__title{font-weight: bold;}
 .oneBox_body_list{width: 100%;height: 39px;line-height: 39px;font-size: 16px;overflow: hidden;}
 
 /*列表项前的小点*/
@@ -29,20 +33,27 @@
 .second .secondLeft .secondLeft_list_img p{line-height: 20px;}
 .secondLeft_list_hd{height: 93px;width: 220px;margin-left: 20px;font-size: 18px;font-weight: 400;padding: 10px 0;}
 
-.second_QR_hd{height: 155px;padding: 10px 10px 0;font-size: 14px;font-weight: bold;padding-top: 10px; margin-right: 20px;}
-.second_QR_hd span{background-color: #1787E0;color: #fff;display: inline-block;width: 27px;height: 88px;
-	text-align: center;margin-top:28px;}
-.second_QR_hd .second_QR_hd_span{height: 110px;margin-top: 15px;}
+.second_QR_hd{background:url(/static/images/phone_left.png)no-repeat;color: #fff;width: 76px;height: 155px;
+	text-align: center;margin: 0 auto;}
+.second_QR_hd span{color: #fff;text-align: center;font-weight: bold;font-size: 16px;display: inline-block;padding: 3px 23px;}
 .img{width: 100%;height: 60px;}
-.img img,.img2 img{width: 25%;}
+.img img{width: 25%;height: 100%;}
+.img2 img{width: 50%;height: 100%;}
 .img2{width: 100%;height: 120px;border:1px solid #ddd;}
 .img3 img{width: 20%;}
 
 
-.third_link{background: url(/static/images/icon.png) no-repeat; width: 142px;height: 42px;color: #fff;}
+/*.third_link{background: url(/static/images/icon.png) no-repeat; width: 142px;height: 42px;color: #fff;}
 .third_link_hd_span{border-left: 2px solid #fff;font-size: 20px;font-weight: 600;padding-left:15px;line-height: 45px;
 		margin-left: 15px;}
-.ul li{float: right;margin-right: 20px;height: 42px;line-height: 42px;font-size: 14px;font-weight: bold;} 
+.ul li{float: right;margin-right: 20px;height: 42px;line-height: 42px;font-size: 14px;font-weight: bold;} */
+.third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
+.third_header h3{float: left;display: inline-block;padding: 9px 0;font-size: 24px;font-weight: 400;
+	border-bottom: 3px solid #1787e0;margin: 0;}
+.third_header .third_header_aside{height: 48px;float: right;width: 600px;margin: 0 auto;background-color: #f5f5f5;text-align: center;}
+.third_header .third_header_aside ul li{display: inline-block;float: left;width: 200px;height: 24px;
+	line-height: 24px;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+
 
 .panel_bd .panel_tltle{font-weight: bold;font-size: 17px;width: auto;overflow: hidden;text-overflow: ellipsis;
 	white-space: nowrap;word-wrap: normal;line-height: 21px;}
