--- a/application/index/view/Layouts/right_aside.html
+++ b/application/index/view/Layouts/right_aside.html
@@ -1,4 +1,5 @@
-
+<!-- 当前页面css -->
+    {css href="/static/index/layouts/css/right_aside.css" /}
 
 <div class="rt right_aside">
 	<div class="oneBox first">
