--- a/application/index/view/Layouts/header.html
+++ b/application/index/view/Layouts/header.html
@@ -38,7 +38,7 @@
                 <a href="#" target="_blank">重庆MBA院校信息发布平台</a>
             </div>
             <div class="top-list textR">
-                <a href="#">院校登陆</a>
+                <a href="/Websitewap/websitewap">院校登陆</a>
                 <a href="#" id="favorites">加入收藏</a>
             </div>
         </div>
@@ -48,7 +48,7 @@
             <div class="header-index">
                 <a href="/" class="header-index-img lt" ><img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台"></a>
                 <div class="header-index-ad  lt">
-                    <img src="static/images/banner.png">
+                    <img src="/static/images/banner.png">
                 </div>
                 <!-- 搜索框 -->
                 <div class="header-index-search lt">
@@ -62,7 +62,7 @@
             <ul class="nav-box">
                 <li class="nav-first">
                     <div class="nav-title">
-                        <a href="/Websitewap/index">首页</a>
+                        <a href="/Message/message">首页</a>
                     </div>
                 </li>
                 <li class="nav-second">
