--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -1,12 +1,11 @@
 
 .left_aside{width: 870px;}
-.right_aside{width: 340px;}
 
 .h10{display: block;width: 100%;height: 10px;font-size: 0;clear: both;}
 .h20{display: block;width: 100%;height: 20px;font-size: 0;clear: both;}
 .h290{height: 290px;}
 .oneBox{margin-top: 20px;}
-.oneBox .oneBox_left,.oneBox .oneBox_right{width: 350px;height: 264px;}
+.oneBox .oneBox_left{width: 350px;height: 264px;}
 .oneBox .oneBox_center{width: 520px;}
 .first{width: 100%;height: 264px;}
 .oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: bold;border-bottom: 1px solid #ddd;}
@@ -31,11 +30,6 @@
 .second .secondLeft .secondLeft_list_img{background: url(/static/images/icon_2.png) no-repeat;color: #fff;
 	width: 80px;height: 93px;text-align: center;font-weight: bold;font-size: 18px;padding-top: 20px;}
 .second .secondLeft .secondLeft_list_img p{line-height: 20px;}
-.secondLeft_list_hd{height: 93px;width: 220px;margin-left: 20px;font-size: 18px;font-weight: 400;padding: 10px 0;}
-
-.second_QR_hd{background:url(/static/images/phone_left.png)no-repeat;color: #fff;width: 76px;height: 155px;
-	text-align: center;margin: 0 auto;}
-.second_QR_hd span{color: #fff;text-align: center;font-weight: bold;font-size: 16px;display: inline-block;padding: 3px 23px;}
 .img{width: 100%;height: 60px;}
 .img img{width: 25%;height: 100%;}
 .img2 img{width: 50%;height: 100%;}
@@ -43,10 +37,6 @@
 .img3 img{width: 20%;}
 
 
-/*.third_link{background: url(/static/images/icon.png) no-repeat; width: 142px;height: 42px;color: #fff;}
-.third_link_hd_span{border-left: 2px solid #fff;font-size: 20px;font-weight: 600;padding-left:15px;line-height: 45px;
-		margin-left: 15px;}
-.ul li{float: right;margin-right: 20px;height: 42px;line-height: 42px;font-size: 14px;font-weight: bold;} */
 .third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
 .third_header h3{float: left;display: inline-block;padding: 9px 0;font-size: 24px;font-weight: 400;
 	border-bottom: 3px solid #1787e0;margin: 0;}
