--- a/application/index/view/Index/index.html
+++ b/application/index/view/Index/index.html
@@ -548,18 +548,18 @@
 		<!-- 考试咨询 综合咨询 初试 复试 英语 数学 逻辑 写作 -->
 		<div class="col-md-12">
 			<div class="third_header">
-			<h3 >考试咨询</h3>
-			<div class="third_header_aside">
-				<ul>
-            	<li><a href="#">初试</a></li>
-            	<li><a href="#">复试</a></li>
-            	<li><a href="#">英语</a></li>
-            	<li><a href="#">数学</a></li>
-            	<li><a href="#">逻辑</a></li>
-            	<li><a href="#">写作</a></li>
-            </ul>
+				<h3 >考试咨询</h3>
+				<div class="third_header_aside">
+					<ul>
+		            	<li><a href="#">初试</a></li>
+		            	<li><a href="#">复试</a></li>
+		            	<li><a href="#">英语</a></li>
+		            	<li><a href="#">数学</a></li>
+		            	<li><a href="#">逻辑</a></li>
+		            	<li><a href="#">写作</a></li>
+		            </ul>
+				</div>
 			</div>
-		</div>
 		</div>
 	</div>
 	<div class="row oneBox">
@@ -820,9 +820,9 @@
 	<div class="row third">
 		<!-- 考试咨询 综合咨询 初试 复试 英语 数学 逻辑 写作 -->
 		<div class="col-md-12">
-			<div class="third_link lt">
-            	<span class="third_link_hd_span">合作伙伴</span>
-        	</div>
+			<div class="third_header">
+				<h3 >合作伙伴</h3>
+			</div>
 		</div>
 		<div class="row">
 		<!-- 广告位 -->
