--- a/application/weapp/view/Layouts/header.html
+++ b/application/weapp/view/Layouts/header.html
@@ -6,7 +6,7 @@
     <title>重庆MBA招生考试服务平台</title>
     <meta  name="description" content="重庆MBA招生考试服务平台">
     <meta name="keywords" content="MBA 考研">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     
     <!-- Bootstrap -->
     {css href="/static/bootstrap/css/bootstrap.min.css" /}
@@ -27,101 +27,18 @@
 
   </head>
   <body>    
-<div class="header">
-    <!-- 顶部通用栏 一 -->
-    <div class="top-nav-wrapper">
-        <div class="top-nav-index">
-            <div class="top-list top-list_left">
-                <a href="#" target="_blank">重庆MBA招生考试服务平台</a>
-                <a href="#" target="_blank">务平台</a>
-                <a href="#" target="_blank">重庆MBA招生考</a>
-                <a href="#" target="_blank">重庆MBA院校信息发布平台</a>
-            </div>
-            <div class="top-list textR">
-                <a href="/Websitewap/websitewap">院校登陆</a>
-                <a href="#" id="favorites">加入收藏</a>
-            </div>
-        </div>
-    </div>
-    <!-- 顶部通用栏 二 -->
-        <div class="header-wrapper">
-            <div class="header-index">
-                <a href="/" class="header-index-img lt" ><img src="/static/images/logo.png" alt="重庆MBA院校信息发布和咨询平台" title="重庆MBA院校信息发布和咨询平台"></a>
-                <div class="header-index-ad  lt">
-                    <img src="/static/images/banner.png">
-                </div>
-                <!-- 搜索框 -->
-                <div class="header-index-search lt">
-                    <input type="text" name="keywords" id="keywords" placeholder="站内搜索" maxlength="40">
-                    <button type="submit" class="search_btn" id="searchBtn"><i class="glyphicon glyphicon-search" title="站内搜索"></i></button>
-                </div>
-            </div>
-        </div>
-    <!-- 顶部通用栏 三 -->
-        <div class="header-nav-box">
-            <ul class="nav-box">
-                <li class="nav-first">
-                    <div class="nav-title">
-                        <a href="/Message/message">首页</a>
-                    </div>
-                </li>
-                <li class="nav-second">
-                    <div class="nav-title">招生</div>
-                    <ul class="nav-td">
-                        <li><a href="#">招生咨询</a></li>
-                        <li><a href="#">考试咨询</a></li>
-                        <li><a href="#">热点公告</a></li>
-                        <li><a href="#">招考公告</a></li>
-                        <li><a href="#">招生咨询</a></li>
-                        <li><a href="#">考试咨询</a></li>
-                        <li><a href="#">热点公告</a></li>
-                        <li><a href="#">招考公告</a></li>
-                        <li><a href="#">招生咨询</a></li>
-                    </ul>
-                </li>
-                <li class="nav-third">
-                    <div class="nav-title">院校</div>
-                    <ul class="nav-td">
-                        <li><a href="#">重庆大学</a></li>
-                        <li><a href="#">重庆工商大学</a></li>
-                        <li><a href="#">重庆师范大学</a></li>
-                        <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">西南大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-                        <li><a href="#">重庆理工大学</a></li>
-
-                    </ul>
-                </li>
-                <li class="nav-fourth">
-                    <div class="nav-title">考试</div>
-                    <ul class="nav-td">
-                        <li><a href="#">初试</a></li>
-                        <li><a href="#">复试</a></li>
-                        <li><a href="#">英语</a></li>
-                        <li><a href="#">数学</a></li>
-                        <li><a href="#">逻辑</a></li>
-                        <li><a href="#">写作</a></li>
-                        <li><a href="#">初试</a></li>
-                        <li><a href="#">复试</a></li>
-                        <li><a href="#">英语</a></li>
-                        <li><a href="#">数学</a></li>
-                        <li><a href="#">逻辑</a></li>
-                        <li><a href="#">写作</a></li>
-                    </ul>
-                </li>
-            </ul>
-            
-        </div>
-    
+    <!-- 头部开始 -->
+<div class="weui-flex">
+  <div class="weui-flex__item">
+      <img src="/static/images/app_logo.png">
+  </div>
+  <div class="weui-flex__item">
+      <p>重庆MBA院校信息发布和咨询平台</p>
+  </div>
 </div>
+
+
+
 
 <!-- header/fooyer js -->
     {js href="/static/index/layouts/js/layouts.js" /}
