--- a/public/static/index/index/css/index.css
+++ b/public/static/index/index/css/index.css
@@ -8,7 +8,7 @@
 .oneBox .oneBox_left{width: 350px;height: 264px;}
 .oneBox .oneBox_center{width: 520px;}
 .first{width: 100%;height: 264px;}
-.oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: bold;border-bottom: 1px solid #ddd;}
+.oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: 500;border-bottom: 1px solid #ddd;}
 .oneBox .oneBox_title .oneBox_title_bd{padding-left: 10px;border-left:2px solid #1787e0;font-size: 20px;}
 .oneBox .oneBox_body{width: 100%;padding:5px 0;}
 .weui-panel__bd .weui-media-box{padding-bottom:4px;}
@@ -34,7 +34,7 @@
 .img img{width: 25%;height: 100%;}
 .img2 img{width: 50%;height: 100%;}
 .img2{width: 100%;height: 120px;border:1px solid #ddd;}
-.img3 img{width: 20%;}
+.img3 img{width: 242px;height: 80px;margin:20px 0 0 10px; }
 
 
 .third_header{width: 100%;height: 48px;border-bottom: 1px solid  #e5e5e5;}
