--- a/public/static/index/layouts/css/right_aside.css
+++ b/public/static/index/layouts/css/right_aside.css
@@ -5,7 +5,7 @@
 .h290{height: 290px;}
 .oneBox{margin-top: 20px;}
 .first{width: 100%;height: 264px;}
-.oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: bold;border-bottom: 1px solid #ddd;}
+.oneBox .oneBox_title{width: 100%;height: 34px;line-height: 34px;font-size: 16px;font-weight: 500;border-bottom: 1px solid #ddd;}
 .oneBox .oneBox_title .oneBox_title_bd{padding-left: 10px;border-left:2px solid #1787e0;font-size: 20px;}
 .oneBox .oneBox_body{width: 100%;padding:5px 0;}
 .weui-panel__bd .weui-media-box{padding-bottom:4px;}
